--- a/resource/README_2019-08-30.md
+++ b/resource/README_2019-08-30.md
@@ -9,7 +9,9 @@ Notice: version 3.0.0 starts to use the new configuration form in **tasks.json**
 
 ## Derived
 
-This extension derived from another VSCode extension - [actboy168.tasks](https://marketplace.visualstudio.com/items?itemName=actboy168.tasks) and based on v0.2.7.
+This extension derived from another VSCode extension and based on v0.2.7:
+
+[![version](https://img.shields.io/visual-studio-marketplace/v/actboy168.tasks?style=flat-square&label=VS%20Marketplace&logo=visual-studio-code)](https://marketplace.visualstudio.com/items?itemName=actboy168.tasks)
 
 ## Preview
 
@@ -91,7 +93,9 @@ You can "add" a built-in icon to the task name with a special syntax, which will
 
 ![icon-in-label](resource/image/new/label_icon.png)
 
-You can find a list of built-in icons provided by VSCode on this page: [icons-in-labels](https://code.visualstudio.com/api/references/icons-in-labels).
+You can find a list of built-in icons provided by VSCode on this page:
+
+[![icons-in-labels](https://img.shields.io/badge/VS%20Code-icons--in--labels-blue?logo=visual-studio-code&style=flat-square)](https://code.visualstudio.com/api/references/icons-in-labels)
 
 You can specify the foreground of the task name.You can use legal color expressions supported by CSS. For example: "DeepPink", "#00f", "#adff2f".Or use the color picker(hover over the color string) provided by VSCode to select the color directly.If you use icon,the foreground of the icon will change as well.
 
